--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@arcjet/next": "^1.0.0-beta.10",
     "@clerk/nextjs": "^6.31.4",
     "@radix-ui/react-slot": "^1.2.3",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "lucide-react": "^0.539.0",
     "next": "15.4.4",
+    "openai": "^5.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
