--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next": "15.4.4",
     "openai": "^5.16.0",
     "react": "19.1.0",
